syntax = "proto3";

package job;

service JobService {
  rpc FindAll (Empty) returns (JobsProto) {}
  rpc AddJob (AddJobProto) returns (JobProto) {}
  rpc recommendedJobOffers(Empty) returns (JobsProto) {}
}

message Empty {
}

message LoginResponse {
  string token = 1;
}

message JobsProto {
  repeated JobProto jobs = 1;
}

message JobProto {
  string id = 1;
  string position = 2;
  string seniority = 3;
  string description = 4;
  repeated string skillsRequired = 5;
}

message AddJobProto {
  string id = 1;
  string position = 2;
  string seniority = 3;
  string description = 4;
  repeated string skillsRequired = 5;
  string company = 6;
  string dislinktToken = 7;
  string userId = 8;
}
